<resources>
    <!--main-->
    <string name="app_name">MyFinancials</string>
    <string name="income">Income</string>
    <string name="depense">Depenses</string>
    <string name="balance">Balance</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="signupwith">Or Signup with</string>

    <!--    add new-->
    <string name="title_activity_add_new">add_new</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_description">Description</string>

    <string name="category_prompt">Select a Category</string>
    <string-array name="category_arrays">
        <item>Select a Category</item>
        <item>Charges</item>
        <item>Clothes</item>
        <item>Entertainment</item>
        <item>Food</item>
        <item>Installment</item>
        <item>Miscellaneous</item>
        <item>Transport</item>
    </string-array>

    <!--    chart-->
    <string name="month_prompt">Select a Month</string>
    <string name="signup">SignUp</string>
    <string name="signinorup">SignIn or SignUp</string>
    <string-array name="month_arrays">
        <item>Select a Month</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
</resources>
