<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <TableRow>

            <TextView

                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="@dimen/main_header_padding"
                android:text="@string/income"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold" />

            <TextView

                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="@dimen/main_header_padding"
                android:text="@string/depense"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold" />

            <TextView

                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="@dimen/main_header_padding"
                android:text="@string/balance"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/total_expense"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="6dp"
                android:text="100"
                android:textAlignment="center"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/total_income"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="6dp"
                android:text="200"
                android:textAlignment="center"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/total_balance"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="6dp"
                android:text="-100"
                android:textAlignment="center"
                android:textColor="#fff" />
        </TableRow>
    </TableLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--                include all records here -->
                <ListView
                    android:id="@+id/record_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></ListView>
            </LinearLayout>


        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:background="@color/colorPrimary"
            android:src="@drawable/plus_button" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="@dimen/fab_margin"
            android:background="@color/colorPrimary"
            android:src="@drawable/chart_button" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>